themes/main/src/sass/menu.scss
@import '_includes/colors';
@import '_includes/query';

@mixin transition-left(){
  -webkit-transition:  left 0.4s ease-in-out;
  -moz-transition:  left 0.4s ease-in-out;
  -ms-transition:  left 0.4s ease-in-out;
  -o-transition:  left 0.4s ease-in-out;
  transition:  left 0.4s ease-in-out;
}

#page-header {
  position: fixed;
  width: 100%;
  top: 0;
  background: #FFF;
}

#page-header .menu-options{
  width: 25px;
  left: 0;
  top: 5px;
  cursor: pointer;
  position: fixed;
  z-index: 1000;
  padding: 10px;
  border-radius: 0 10px 10px 0;
  background: #FFF;
  box-shadow: -3px 0 3px 0 rgba(0,0,0,0.42);
  transition: all 0.4s ease;
  @include transition-left();

  .fa {
    font-size: 1.9em;
    color: $red;

  }

  &.open{
    left: 240px;
  }

  @include media-query(MEDIUM) {
    display: none;
  }
}


#page-header .menu-nav{
  left: -240px;
  width: 240px;
  top: 0;
  box-sizing: border-box;
  padding-top: 5px;
  background: white;
  padding: 0;
  min-height: 100vh;
  -webkit-box-shadow: 0px 0px 19px 6px rgba(0, 0, 0, 0.42);
  -moz-box-shadow: 0px 0px 19px 6px rgba(0, 0, 0, 0.42);
  box-shadow: 0px 0px 19px 6px rgba(0, 0, 0, 0.42);
  color: #555;
  display: table;
  float: right;
  position: fixed;
  table-layout: fixed;
  @include transition-left();

  &.open {
    left: 0;
    top: 4px;
  }

  @include media-query(MEDIUM) {
    display: inline-block;
    float: none;
    width: 100%;
    min-height: 40px;
    height: 60px;
    margin-top: 2px;
    box-shadow: 0px 6px 10px -2px rgba(0, 0, 0, 0.42);
    position: relative;
    left: 0;
    background-color: $bdf-red;
    padding:  0 8.5%;
  }
}

#page-header figure{
  margin: 0;
}

#page-header .menu-nav ul{
  list-style: none;
  margin: 0;
  width: 100%;
  padding: 0;

  @include media-query(MEDIUM) {
    margin: 0;
    height: 100%;
    width: 100%;
    padding: 0;
    display: flex;
    justify-content: start;
  }
}

#page-header .menu-nav li{
  position: relative;
  font-size: 1em;
  font-weight: bold;
  border-bottom: 1px solid $bdf-red;
  border-top: 1px solid $red;
  padding: 15px;

  a {
    text-decoration: none;
    color: $bdf-red;
  }

  @include media-query(MEDIUM) {
    margin: auto;
    align-self: center;
    white-space: nowrap;

    a {
      text-decoration:  none;
      color: white;
      font-size: 1.3em;
      font-weight: 400;
    }
    a.active {
      font-weight: 700;
    }
  }
}


#page-header .banner-header{
  height: 60px;
  background-color: $bdf-red;
  display: flex;
  padding-left: 50px;
  position: fixed;
  width: 100%;
  transition: all 0.4s ease;

  a {
    display: flex;
  }

  img {
    width: auto;
    height: 50px;
    align-self: center;
  }


  @include media-query(MEDIUM) {
    height: 130px;
    padding-left: 9.2%;
    display: flex;
    align-self: center;
    justify-content: start;
    position: initial;
    width: auto;

    img {
      height: 90px;
    }
  }
}

#page-header .banner-header img{
  -webkit-transition: -webkit-transform 0.4s ease;
  -moz-transition: -moz-transform 0.4s ease;
  transition: transform 0.4s ease;
}


#page-header .banner-header.smaller{
  @include media-query(MEDIUM) {
    height: 60px;

    img{
      //height: 40px;
      -ms-transform: scale(1); /* IE 9 */
      -webkit-transform: scale(1); /* Safari */
      transform: scale(1);
    }
  }
}

#page-header .menu-options.smaller{
  @include media-query(MEDIUM) {
    top: 0;
    padding: 5px;
    width: 27px;
  }
}

#page-header .menu-nav.smaller{
  &.open{
    top: 0;
  }
}

